tests/e2e/multi_line_heredoc_invalid_double.error
Error: syntax error in story at line 1, column 14

1|    a = """aaa"""bbb"""
                   ^

E0007: Missing value after `=`
